Archive2/d3/be86c30729929a/output
main.cpp: In function 'int main()':
main.cpp:10:12: error: no matching function for call to 'bar(<unresolved overloaded function type>)'
     bar(foo);
            ^
main.cpp:10:12: note: candidate is:
main.cpp:5:6: note: template<class F> decltype (f(1)) bar(F)
 auto bar(F f) -> decltype( f(1) ) { return f(1); }
      ^
main.cpp:5:6: note:   template argument deduction/substitution failed:
main.cpp:10:12: note:   couldn't deduce template parameter 'F'
     bar(foo);
            ^
main.cpp:13:15: error: no matching function for call to 'bar(<unresolved overloaded function type>, int)'
     bar(foo, 0);
               ^
main.cpp:13:15: note: candidate is:
main.cpp:5:6: note: template<class F> decltype (f(1)) bar(F)
 auto bar(F f) -> decltype( f(1) ) { return f(1); }
      ^
main.cpp:5:6: note:   template argument deduction/substitution failed:
main.cpp:13:15: note:   candidate expects 1 argument, 2 provided
     bar(foo, 0);
               ^
